--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-empty-function":"off",
     "simple-import-sort/exports": "error",
+    "react/prop-types": "off",
     "simple-import-sort/imports": [
       "error",
       {
